# karet

./: .gitignore  AGENTS.md  Cargo.toml  README.md  hk.pkl  mise.toml  release-plz.toml  rust-toolchain.toml  rustfmt.toml  settings.schema.json
crates/blameline/: CHANGELOG.md  Cargo.toml  README.md
crates/blameline/examples/: blame.rs
crates/blameline/src/: blame.rs  lib.rs  treesitter.rs
crates/blameline/tests/: integration.rs
crates/karet/: Cargo.toml  README.md  build.rs
crates/karet-cbor/: Cargo.toml
crates/karet-cbor/src/: codec.rs  diag.rs  error.rs  lib.rs  value.rs
crates/karet-cbor/src/diag/: parse.rs  print.rs
crates/karet-cbor/tests/: roundtrip.rs
crates/karet-clipboard/: Cargo.toml
crates/karet-clipboard/src/: lib.rs
crates/karet-core/: CHANGELOG.md  Cargo.toml  README.md
crates/karet-core/src/: blame.rs  coord.rs  edit.rs  error.rs  geometry.rs  graph.rs  lib.rs  model.rs  notify.rs  provider.rs  token.rs
crates/karet-dap/: CHANGELOG.md  Cargo.toml  README.md
crates/karet-dap/src/: lib.rs
crates/karet-diff/: CHANGELOG.md  Cargo.toml  README.md
crates/karet-diff/src/: align.rs  engine.rs  intraline.rs  lib.rs  model.rs  parse.rs  patch.rs
crates/karet-docx/: Cargo.toml
crates/karet-docx/src/: error.rs  lib.rs  markdown.rs  model.rs  parse.rs
crates/karet-docx/tests/: docx.rs
crates/karet-editor/: CHANGELOG.md  Cargo.toml  README.md
crates/karet-editor/examples/: read_only.rs
crates/karet-editor/src/: conflict.rs  lib.rs  state.rs  tests.rs  text.rs  view.rs  visual.rs
crates/karet-filetype/: CHANGELOG.md  Cargo.toml  README.md
crates/karet-filetype/src/: classify.rs  icon.rs  lib.rs  registry.rs
crates/karet-fileview/: CHANGELOG.md  Cargo.toml  README.md
crates/karet-fileview/examples/: render_file.rs
crates/karet-fileview/src/: doc.rs  hex.rs  image.rs  lib.rs  view.rs  viewer.rs
crates/karet-fuzzy/: Cargo.toml
crates/karet-fuzzy/src/: lib.rs
crates/karet-github/: Cargo.toml  README.md  build.rs
crates/karet-github/openapi/: README.md  generated-operations.json  manual-operations.json  surface-operations.json
crates/karet-github/src/: client.rs  lib.rs  models.rs  remote.rs
crates/karet-github/src/client/: pull_request.rs  tests.rs  wire.rs
crates/karet-graph/: Cargo.toml
crates/karet-graph/src/: lib.rs  view.rs
crates/karet-image/: Cargo.toml
crates/karet-image/src/: lib.rs
crates/karet-input/: Cargo.toml
crates/karet-input/src/: lib.rs
crates/karet-lsp/: CHANGELOG.md  Cargo.toml  README.md
crates/karet-lsp/src/: codec.rs  conn.rs  convert.rs  jsonrpc.rs  lib.rs  snippet.rs  uri.rs
crates/karet-markdown/: Cargo.toml
crates/karet-markdown/src/: highlight.rs  lib.rs  parse.rs  table.rs  view.rs  wrap.rs
crates/karet-markdown/src/wrap/: tests.rs
crates/karet-pdf/: Cargo.toml  README.md
crates/karet-pdf/src/: error.rs  lib.rs
crates/karet-search/: CHANGELOG.md  Cargo.toml  README.md
crates/karet-search/src/: lib.rs
crates/karet-session/: Cargo.toml
crates/karet-session/examples/: settings-schema.rs
crates/karet-session/src/: aicommit.rs  api.rs  backend.rs  backup.rs  cancellation.rs  editorconfig.rs  highlight.rs  latex.rs  lib.rs  local.rs  lsp.rs  lsp_registry.rs  process_supervisor.rs  session.rs  spell.rs  vcs_worker.rs  viz.rs
crates/karet-session/src/api/: event.rs  github.rs
crates/karet-session/src/config/: load.rs  mod.rs  schema.rs
crates/karet-session/src/lsp/: tests.rs
crates/karet-session/src/lsp_registry/: catalog.rs
crates/karet-session/src/session/: documents.rs  github.rs  persistence.rs  tests.rs  updates.rs  vcs.rs
crates/karet-session/src/session/tests/: documents.rs  latex.rs  persistence.rs  vcs.rs
crates/karet-syntax/: CHANGELOG.md  Cargo.toml  README.md
crates/karet-syntax/src/: blocks.rs  highlight.rs  lib.rs  map.rs  semantic.rs
crates/karet-terminal/: Cargo.toml
crates/karet-terminal/src/: lib.rs
crates/karet-text/: CHANGELOG.md  Cargo.toml  README.md
crates/karet-text/src/: apply.rs  history.rs  lib.rs  load.rs  save.rs
crates/karet-theme/: CHANGELOG.md  Cargo.toml  README.md
crates/karet-theme/src/: default.rs  lib.rs  load_vscode.rs
crates/karet-treesitter/: CHANGELOG.md  Cargo.toml  README.md
crates/karet-treesitter/src/: detect.rs  injection.rs  lib.rs  registry.rs  tests.rs
crates/karet-vcs/: CHANGELOG.md  Cargo.toml  README.md
crates/karet-vcs/src/: branch.rs  changes.rs  detail.rs  lib.rs  log.rs  remote.rs  repo.rs  selection.rs  stash.rs  summary.rs  test_support.rs  write.rs
crates/karet-vcs/src/changes/: tests.rs
crates/karet-watch/: Cargo.toml
crates/karet-watch/src/: lib.rs  tests.rs
crates/karet-widgets/: Cargo.toml
crates/karet-widgets/src/: completion.rs  file_tree.rs  glyph.rs  hex.rs  lib.rs  notify.rs  pane.rs  select.rs  viewer.rs
crates/karet-widgets/src/file_tree/: model.rs  state.rs  tests.rs  view.rs
crates/karet/src/: app.rs  cli.rs  clipboard.rs  command.rs  compat.rs  completion.rs  desktop.rs  doctor.rs  editing.rs  input.rs  keymap.rs  links.rs  main.rs  notify.rs  outline.rs  overlay.rs  remote.rs  render.rs  tab.rs  term_caps.rs  ui.rs  workspace.rs
crates/karet/src/app/: backend_events.rs  commands.rs  completion.rs  editor.rs  explorer.rs  github.rs  history.rs  input.rs  language_servers.rs  lifecycle.rs  mouse.rs  panes.rs  prepare.rs  remote_actions.rs  runtime.rs  scm.rs  search.rs  sidebar.rs  spellcheck.rs  startup.rs  tabs.rs  tests.rs  util.rs
crates/karet/src/app/github/: events.rs  forms.rs  pull_request.rs  state.rs
crates/karet/src/app/tests/: blame.rs  commit_navigation.rs  commit_view.rs  editor_mouse.rs  explorer.rs  github.rs  lifecycle.rs  preview.rs  remote.rs  save.rs  scm.rs  search_completion.rs  spellcheck.rs  startup.rs  support.rs  tabs_search.rs
crates/karet/src/command/: resolve.rs  tests.rs
crates/karet/src/keymap/: bindings.rs  chord.rs  layer.rs  mod.rs  tests.rs
crates/karet/src/ui/: commit.rs  content.rs  github.rs  panes.rs  scm.rs  secondary.rs  sidebar.rs  status.rs  tests.rs
crates/karet/src/ui/github/: detail.rs  (+1 more)
(+15 files in other folders)
