# karet — a Cargo workspace of reusable primitives ("engines") for building TUI
# code editors, plus the `karet` application binary that composes them.
#
# This is a *virtual* manifest: there is no root package. Every crate lives under
# `crates/*` and inherits common metadata from `[workspace.package]` and pinned
# dependency versions from `[workspace.dependencies]` so the whole workspace is
# released in lockstep at a single synchronized version.
[workspace]
resolver = "3"
members  = ["crates/*"]

[workspace.package]
version      = "0.1.0"
edition      = "2024"
rust-version = "1.90"                  # edition 2024 needs 1.85; pinned deps (ratatui 0.30,
                                       # image, ratatui-image→quantette) raise the real floor

authors      = ["Justin Chung"]
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/getkono/karet"
homepage     = "https://github.com/getkono/karet"
readme       = "README.md"
keywords     = ["tui", "editor", "ratatui", "terminal"]
categories   = ["text-editors", "command-line-utilities"]

[workspace.dependencies]
# --- internal crates: path + version → publishable AND version-synced ---
karet-core       = { path = "crates/karet-core",       version = "0.1.0" }
karet-filetype   = { path = "crates/karet-filetype",   version = "0.1.0" }
karet-text       = { path = "crates/karet-text",       version = "0.1.0" }
karet-treesitter = { path = "crates/karet-treesitter", version = "0.1.0" }
karet-syntax     = { path = "crates/karet-syntax",     version = "0.1.0" }
karet-theme      = { path = "crates/karet-theme",      version = "0.1.0" }
karet-diff       = { path = "crates/karet-diff",       version = "0.1.0" }
karet-markdown   = { path = "crates/karet-markdown",   version = "0.1.0" }
karet-terminal   = { path = "crates/karet-terminal",   version = "0.1.0" }
karet-lsp        = { path = "crates/karet-lsp",        version = "0.1.0" }
karet-dap        = { path = "crates/karet-dap",        version = "0.1.0" }
karet-vcs        = { path = "crates/karet-vcs",        version = "0.1.0" }
karet-search     = { path = "crates/karet-search",     version = "0.1.0" }
karet-fuzzy      = { path = "crates/karet-fuzzy",      version = "0.1.0" }
karet-widgets    = { path = "crates/karet-widgets",    version = "0.1.0" }
karet-editor     = { path = "crates/karet-editor",     version = "0.1.0" }
karet-session    = { path = "crates/karet-session",    version = "0.1.0" }
karet-watch      = { path = "crates/karet-watch",      version = "0.1.0" }
# blameline is a standalone library on its OWN SemVer line (NOT the workspace lockstep);
# pin its independent version here. See crates/blameline/README.md.
blameline        = { path = "crates/blameline",         version = "1.0.0" }

# --- shared external dependencies (versions verified via `cargo add`) ---
# Foundational
thiserror = "2.0.18"
tokio     = { version = "1.52.3", default-features = false }  # crates opt into features
tracing   = "0.1.44"
serde     = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml      = "1.1.2"
smallvec  = "1.15.2"
# Terminal UI
ratatui   = "0.30.2"
crossterm = "0.29.0"
# NOTE: `ratatui-image` (terminal image protocols) is intentionally not centralized
# here — its build script needs the system C library `chafa`. Wire it in
# `karet-image` once that system dependency is acceptable.
unicode-width = "0.2.2"
unicode-segmentation = "1.13.3"
# Text / rope
ropey    = "1.6.1"
memmap2  = "0.9.11"
tempfile = "3.27"                      # atomic crash-safe file saves (karet-text)
# Tree-sitter (sole syntax backend)
tree-sitter           = "0.26.9"
tree-sitter-highlight = "0.26.9"
# Tree-sitter grammars (generated ABI 14–15; tree-sitter 0.26.9 accepts ABI 13–15).
# Each is an official `tree-sitter/tree-sitter-<lang>` crate that deps on
# `tree-sitter-language` and only dev-deps `tree-sitter`, so there is no version clash.
# Wired into `karet-treesitter` behind `lang-*` features (off by default).
tree-sitter-rust       = "0.24.2"
tree-sitter-python     = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-json       = "0.24.8"
tree-sitter-go         = "0.25.0"
tree-sitter-c          = "0.24.2"
tree-sitter-toml-ng    = "0.7.0"
tree-sitter-bash       = "0.25.1"
tree-sitter-java       = "0.23.5"
tree-sitter-cpp        = "0.23.4"
tree-sitter-c-sharp    = "0.23.5"
tree-sitter-ruby       = "0.23.1"
tree-sitter-php        = "0.24.2"
tree-sitter-html       = "0.23.2"
tree-sitter-css        = "0.25.0"
tree-sitter-yaml       = "0.7.2"
tree-sitter-typescript = "0.23.2"
tree-sitter-md         = "0.5.3"
# Diff / markdown / image
imara-diff    = "0.2.0"
pulldown-cmark = "0.13.4"
image         = "0.25.10"
# Terminal emulation
vt100        = "0.16.2"
portable-pty = "0.9.0"
# Language intelligence
async-lsp = "0.2.4"
lsp-types = "0.97.0"
# Version control
# `status` pulls gix-status + dirwalk (untracked) + index + blob-diff; `sha1` is the
# (mandatory, not-implied) hash backend; `max-performance-safe` is pure-Rust (no C
# toolchain). We trim the heavy default `extras` (archive/credentials/mailmap/…).
# NOTE: the `blameline` crate enables gix's `blame` feature; feature unification means
# the workspace build compiles gix's blame module even though it's not listed here.
gix = { version = "0.85.0", default-features = false, features = ["status", "max-performance-safe", "sha1"] }
# Optional libgit2 write backend for karet-vcs staging (no ssh/https system deps;
# libgit2-sys still vendors and builds libgit2 via a C toolchain when enabled).
git2 = { version = "0.20", default-features = false }
# Filesystem watching (karet-watch)
notify                 = "8.2"
notify-debouncer-full  = "0.7"
# Search
ignore        = "0.4.26"
grep-searcher = "0.1.16"
grep-regex    = "0.1.14"
grep-matcher  = "0.1.8"
regex         = "1.12.4"
memchr        = "2.8.2"
# Fuzzy / misc
nucleo      = "0.5.0"
base64      = "0.22.1"
palette     = "0.7.6"
plist       = "1.9.0"
ec4rs       = "1.2.0"
spellbook   = "0.4.2"
directories = "6.0.0"
# Application-only
clap               = { version = "4.6.1", features = ["derive"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
color-eyre         = "0.6.5"

# Workspace-wide lint policy, mirroring the conventions in AGENTS.md. Library
# crates inherit this via `[lints] workspace = true`; the `karet` application
# opts out (see crates/karet/Cargo.toml) since it is not a stable-API library.
[workspace.lints.rust]
missing_docs = "warn"        # every pub item needs a doc comment

[workspace.lints.clippy]
unwrap_used = "warn"         # surface errors through thiserror types instead
expect_used = "warn"
panic       = "warn"
