[package]
name        = "karet-clipboard"
description = "Clipboard integration (OSC 52 + external tool fallbacks) for karet TUI editors."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true

[features]
default = []
# Async (tokio) variants of the external-tool fallbacks.
async = ["dep:tokio"]

[dependencies]
base64.workspace = true
thiserror.workspace = true
tokio = { workspace = true, optional = true, features = ["process", "rt", "io-util"] }

[lints]
workspace = true
