[package]
name        = "karet-core"
description = "Shared vocabulary (geometry, text coordinates, neutral models) for the karet TUI editor toolkit."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true

[features]
default = []
# Derive `serde` (de)serialization on the shared model types.
serde = ["dep:serde"]

[dependencies]
thiserror.workspace = true
serde = { workspace = true, optional = true }

[lints]
workspace = true
