[package]
name        = "karet-dap"
description = "Async Debug Adapter Protocol client for karet TUI editors (breakpoints, variables, call stack)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true

[features]
default = []
# ratatui debug panels (variable inspector, call stack, console, step controls).
view = ["dep:ratatui"]

[dependencies]
karet-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "io-util", "process", "macros"] }
thiserror.workspace = true
tracing.workspace = true
ratatui = { workspace = true, optional = true }
# TODO: DAP protocol types — hand-roll over serde, or adopt the `dap` crate once it is past alpha.

[lints]
workspace = true
