[package]
name        = "karet-diff"
description = "Pure, syntax-aware text diffing engine (tree-sitter structural diff with line/word fallback) for karet."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
readme = "README.md"
keywords.workspace     = true
categories.workspace   = true

[features]
default = []

[dependencies]
imara-diff.workspace = true
thiserror.workspace = true
# NOTE: tree-sitter structural diffing (DiffStrategy::Structural) is reserved but not
# yet implemented; karet-treesitter will be re-added as a dependency when it lands.

[lints]
workspace = true
