[package]
name        = "karet-fileview"
description = "A read-only ratatui widget that renders any file — highlighted code, images, hex dumps, and placeholders — behind one dispatch."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true
publish = false                       # made publishable in a later commit (see the release commit)

[features]
default = []

[dependencies]
karet-core.workspace = true
karet-filetype.workspace = true       # classify/FileKind + the Placeholder re-exports
karet-theme = { workspace = true, features = ["view"] }  # role colors for the hex view
ratatui.workspace = true
image.workspace = true                # image decode + halfblock rendering
base64.workspace = true               # Kitty graphics protocol payload encoding
thiserror.workspace = true

[lints]
workspace = true
