[package]
name        = "karet-fileview"
description = "A read-only ratatui widget that renders any file — highlighted code, images, hex dumps, and placeholders — behind one dispatch."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true

[features]
default = []
# Compile in every tree-sitter grammar so the text branch highlights. Off by
# default so a consumer that only renders images/hex/plain text pulls no grammars.
all-languages = ["karet-treesitter/all-languages"]
# Rasterize PDF pages (via karet-pdf/hayro) into the Kitty image path. Off by
# default so a consumer that never opens PDFs pulls neither hayro nor its deps.
pdf = ["dep:karet-pdf"]

[dependencies]
karet-core.workspace = true
karet-filetype.workspace = true       # classify/FileKind + the Placeholder re-exports
karet-text.workspace = true           # the read-only TextBuffer
karet-treesitter.workspace = true     # parse host + language ids for highlighting
karet-syntax.workspace = true         # tree-sitter highlighting -> Highlights
karet-theme = { workspace = true, features = ["view"] }  # role colors for the views
karet-editor.workspace = true         # renders the highlighted text branch (read-only)
karet-pdf = { workspace = true, optional = true }  # PDF page rasterization (behind `pdf`)
ratatui.workspace = true
image.workspace = true                # image decode + halfblock rendering
base64.workspace = true               # Kitty graphics protocol payload encoding
thiserror.workspace = true

[dev-dependencies]
# Enable every grammar for the crate's own tests + examples so the text branch
# highlights out of the box; real consumers opt in via the `all-languages` feature.
karet-treesitter = { workspace = true, features = ["all-languages"] }
crossterm.workspace = true

[lints]
workspace = true
