[package]
name        = "karet-fileview"
description = "A read-only ratatui widget that renders any file — highlighted code, images, hex dumps, and placeholders — behind one dispatch."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true

[features]
default = []
# Compile in every tree-sitter grammar so the text branch highlights. Off by
# default so a consumer that only renders images/hex/plain text pulls no grammars.
all-languages = ["karet-treesitter/all-languages"]
# The shared terminal-image primitives (Kitty escape + halfblock rendering). These
# pull the `image` raster crate, so they are gated on. Enabled automatically by
# `images` and `pdf`; a consumer rarely selects it directly.
raster = ["dep:image", "dep:base64"]
# Decode & render raster image FILES: adds the image-codec entry points on top of
# the shared `raster` primitives. Off by default so a consumer that never opens
# images pulls no image codecs.
images = ["raster"]
# Rasterize PDF pages (via karet-pdf/hayro) into the Kitty image path. Off by
# default so a consumer that never opens PDFs pulls neither hayro nor its deps; it
# reuses the shared `raster` primitives to display the rendered page.
pdf = ["dep:karet-pdf", "raster"]
# Convert Word `.docx` documents (via karet-docx) to markdown and render them
# through the text branch. Off by default so a consumer that never opens DOCX
# pulls neither `zip` nor `quick-xml`.
docx = ["dep:karet-docx"]

[dependencies]
karet-core.workspace = true
karet-filetype.workspace = true       # classify/FileKind + the Placeholder re-exports
karet-text.workspace = true           # the read-only TextBuffer
karet-treesitter.workspace = true     # parse host + language ids for highlighting
karet-syntax.workspace = true         # tree-sitter highlighting -> Highlights
karet-theme = { workspace = true, features = ["view"] }  # role colors for the views
karet-editor.workspace = true         # renders the highlighted text branch (read-only)
karet-pdf = { workspace = true, optional = true }  # PDF page rasterization (behind `pdf`)
karet-docx = { workspace = true, optional = true } # DOCX → markdown conversion (behind `docx`)
ratatui.workspace = true
image = { workspace = true, optional = true }   # image decode + halfblock rendering (behind `raster`)
base64 = { workspace = true, optional = true }  # Kitty graphics protocol payload encoding (behind `raster`)
thiserror.workspace = true

[dev-dependencies]
# Enable every grammar for the crate's own tests + examples so the text branch
# highlights out of the box; real consumers opt in via the `all-languages` feature.
karet-treesitter = { workspace = true, features = ["all-languages"] }
crossterm.workspace = true
zip.workspace = true                  # build in-test DOCX fixtures for the docx branch

[lints]
workspace = true
