[package]
name        = "karet-fuzzy"
description = "Fuzzy matching, frecency ranking and quick-open query parsing for karet (and any picker)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true
publish = false                       # karet-internal — not published to crates.io

[features]
default = []

[dependencies]
nucleo.workspace = true
thiserror.workspace = true

[lints]
workspace = true
